--- a/app/views/births/multipleBirths3/child2Details/02-child2-place-of-birth.html
+++ b/app/views/births/multipleBirths3/child2Details/02-child2-place-of-birth.html
@@ -146,7 +146,8 @@ href: "javascript:window.history.back()"
         <br>
       </fieldset>
       {{ govukButton({
-      text: "Save and return"
+      text: "Save and return",
+      href: "../tasks/child2index.html"
       }) }}
     </div>
 
