--- a/app/views/births/multipleBirths3/parentsDetails/mothers-name.html
+++ b/app/views/births/multipleBirths3/parentsDetails/mothers-name.html
@@ -52,7 +52,7 @@ href: "javascript:window.history.back()"
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               <h1 class="govuk-fieldset__heading">
-                Capitalise last name?
+                Capitalise last name
               </h1>
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
@@ -218,7 +218,7 @@ href: "javascript:window.history.back()"
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               <h1 class="govuk-fieldset__heading">
-                Capitalise last name?
+                Capitalise maiden name
               </h1>
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
@@ -240,7 +240,7 @@ href: "javascript:window.history.back()"
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="suffix">
-            Last name at marriage (if different from maiden name)
+            Last name (if different at marriage / civil partnership)
           </label>
           <input class="govuk-input govuk-!-width-one-half" id="mothersLastMarriageName" name="mothersLastMarriageName"
             type="text" value="{{data['mothersLastMarriageName']}}">
@@ -250,7 +250,7 @@ href: "javascript:window.history.back()"
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               <h1 class="govuk-fieldset__heading">
-                Capitalise last name?
+                Capitalise last name
               </h1>
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
