--- a/app/views/births/multipleBirths3/statsChild2/confidentialChild2.html
+++ b/app/views/births/multipleBirths3/statsChild2/confidentialChild2.html
@@ -43,7 +43,7 @@ href: "javascript:window.history.back()"
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="motherDOBknown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                Do you know the mother's date of birth?
+                Does the informant know the mother’s date of birth?
               </legend>
 
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -127,7 +127,7 @@ href: "javascript:window.history.back()"
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="fatherDOBknown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                Do you know the father's date of birth?
+                Does the informant know the father's date of birth?
               </legend>
 
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -212,7 +212,7 @@ href: "javascript:window.history.back()"
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                Do you know the date of the parent's marriage?
+                Does the informant know the date of the parent's marriage?
               </legend>
 
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -500,7 +500,8 @@ href: "javascript:window.history.back()"
 
           <div class="govuk-button-group">
             {{ govukButton({
-            text: "Save and return"
+            text: "Save and return",
+            href: "../tasks/child2index.html"
             }) }}
           </div>
 
