--- a/app/views/births/multipleBirths3/submit/check-answers-page.html
+++ b/app/views/births/multipleBirths3/submit/check-answers-page.html
@@ -114,10 +114,10 @@ href: "javascript:window.history.back()"
           Maiden name
         </dt>
         <dd class="govuk-summary-list__value">
-          
+          MARTINEZ LARA
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> address</span></a>
+          <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> customer reference</span></a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -274,7 +274,12 @@ href: "javascript:window.history.back()"
       </a>
     </p>
   -->
-    
+  <p  class="govuk-body govuk-!-margin-bottom-9">
+    <a href="/public/documents/OliverRegisterPage.pdf" target="_blank" class="govuk-link">
+     Print draft register page (opens in a new tab)
+    </a>
+  </p>   
+
   <div class="govuk-grid-row govuk-grid-column-full">
 
     <h2 class="govuk-heading-m">Informant's declaration</h2>
