--- a/app/views/births/multipleBirths3/02-child3-correct.html
+++ b/app/views/births/multipleBirths3/02-child3-correct.html
@@ -13,7 +13,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
     </h1>
     
     <div class="header-with-button">
-      <h2 class="govuk-heading-m">Child 2</h2>
+      <h2 class="govuk-heading-m">Child 3</h2>
     </div>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -21,7 +21,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
           NHS number
         </dt>
         <dd class="govuk-summary-list__value">
-          987 654 3211 
+          987 654 3212 
         </dd>
         <dd class="govuk-summary-list__actions">
         </dd>
@@ -83,7 +83,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
 
     {{ govukButton({
     text: "Yes, continue",
-    href: "/births/multipleBirths3/triageChild2/05-child2-check-details.html"
+    href: ""
     }) }}
 
     <div class="govuk-form-group">
