--- a/app/views/births/multipleBirths3/childsDetails/01-name-date.html
+++ b/app/views/births/multipleBirths3/childsDetails/01-name-date.html
@@ -155,7 +155,7 @@ href: "javascript:window.history.back()"
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               <h1 class="govuk-fieldset__heading">
-                Capitalise last name?
+                Capitalise last name
               </h1>
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
