--- a/app/views/births/multipleBirths3/parentsDetailsChild2/fathers-details-child2.html
+++ b/app/views/births/multipleBirths3/parentsDetailsChild2/fathers-details-child2.html
@@ -33,7 +33,7 @@ href: "javascript:window.history.back()"
           Place of birth
         </label>
         <input class="govuk-input govuk-!-width-one-half" id="fathersPlaceOfBirth" name="fathersPlaceOfBirth"
-          type="text" aria-describedby="fathersPlaceOfBirth-hint" aria-required="false" value="Mexico">
+          type="text" aria-describedby="fathersPlaceOfBirth-hint" aria-required="false" value="Puebla, Mexico">
       </div>
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" id="fathersCountryOfBirth-fieldset" aria-required="false">
@@ -132,94 +132,45 @@ href: "javascript:window.history.back()"
           Occupation
         </label>
         <input class="govuk-input govuk-!-width-two-thirds" id="fathersOccupation" name="fathersOccupation" type="text"
-          aria-describedby="fathersOccupation-hint" aria-required="false" value="Cleaner">
+          aria-describedby="fathersOccupation-hint" aria-required="false" value="Architect">
       </div>
       <br>
 
-      <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-          <h3 class="govuk-fieldset__heading">
-            Address
-          </h3>
-        </legend>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-line-1">
-            Flat number or name
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-1" name="addressLine1" type="text"
-            autocomplete="address-line1">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-line-2">
-            Building number
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-2" name="addressLine2" type="text"
-            autocomplete="address-line2">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-town">
-            Building name
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="addressTown" type="text"
-            autocomplete="address-level2">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-county">
-            Street address line 1
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="addressCounty" type="text"
-            value="23 West Drive">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-line-1">
-            Street address line 2
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-1" name="addressLine1" type="text"
-            autocomplete="address-line1">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-line-2">
-            Street address line 3
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-2" name="addressLine2" type="text"
-            autocomplete="address-line2">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-town">
-            Street address line 4
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="addressTown" type="text"
-            autocomplete="address-level2">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-county">
-            Town or city
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="addressCounty" type="text"
-            value="Eastleigh">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-county">
-            County
-          </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="addressCounty" type="text">
-        </div>
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="address-postcode">
-            Postcode
-          </label>
-          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text"
-            autocomplete="postal-code" value="SO50 6FN">
-        </div>
-        <p class="govuk-body">
-          <a href="#" class="govuk-link govuk-link--no-visited-state">Search by postcode</a>
-        </p>
-        <br>
-      </fieldset>
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+            <h1 class="govuk-fieldset__heading">
+              Address
+            </h1>
+          </legend>
+          <div class="govuk-radios" data-module="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                29 Willow Crescent, Eastleigh, SO50 6DR
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                18 Hawthorn Way, Eastleigh, SO59 6QN
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio"
+                value="scotland">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                Other
+              </label>
+            </div>
+          </div>
+        </fieldset>
+      </div>
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/child2index.html"
         })
         }}
       </div>
