--- a/app/views/births/multipleBirths3/parentsDetailsChild2/fathers-name-child2.html
+++ b/app/views/births/multipleBirths3/parentsDetailsChild2/fathers-name-child2.html
@@ -56,7 +56,7 @@ href: "javascript:window.history.back()"
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               <h1 class="govuk-fieldset__heading">
-                Capitalise last name?
+                Capitalise last name
               </h1>
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
@@ -157,7 +157,8 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return"
+        text: "Save and return",
+        href: "../tasks/child2index.html"
         }) }}
       </div>
 
