--- a/app/views/births/multipleBirths3/submitChild2/confirmation-page-child2.html
+++ b/app/views/births/multipleBirths3/submitChild2/confirmation-page-child2.html
@@ -11,7 +11,7 @@
 
       {{ govukPanel({
         titleText: "Registration complete",
-        html: "System number 500248149"
+        html: "Entry number 500248149"
       }) }}
 
       <br>
@@ -34,34 +34,47 @@
         You can now print the birth certificates.
       </p>
         <br>
-        <label class="govuk-label govuk-label--s" for="example-2">
-          Child 1
-        </label><br>
-       <p  class="govuk-body govuk-!-margin-bottom-9">
-        <a href="/public/documents/Oliver-birth-certificate.pdf" target="_blank" class="govuk-link">
-          View and print standard certificate (opens in a new tab)
-        </a>
-        <br>
-        <br>
-        <a href="#">
-          View and print short certificate (opens in a new tab)
-        </a>
-      </p> 
-      <label class="govuk-label govuk-label--s" for="example-2">
-        Child 2
-      </label>
-      <br>
-       <p  class="govuk-body govuk-!-margin-bottom-9">
-        <a href="/public/documents/Anna-birth-certificate.pdf" target="_blank" class="govuk-link">
-          View and print standard certificate (opens in a new tab)
-        </a>
-        <br>
-        <br>
-        <a href="#">
-          View and print short certificate (opens in a new tab)
-        </a>
-      </p> 
 
+        <h3 class="govuk-heading-s">
+          Oliver Perez Martinez
+        </h3>
+        <p  class="govuk-body govuk-!-margin-bottom-9">
+          <a href="/public/documents/OliverBirthCert.pdf" target="_blank" class="govuk-link">
+            View and print standard certificate (opens in a new tab)
+          </a>
+          <br>
+          <br>
+          <a href="#">
+            View and print short certificate (opens in a new tab)
+          </a>
+        </p> 
+        <h3 class="govuk-heading-s">
+          Anna Perez Martinez
+        </h3>
+        <p  class="govuk-body govuk-!-margin-bottom-9">
+          <a href="/public/documents/AnnaBirthCert.pdf" target="_blank" class="govuk-link">
+            View and print standard certificate (opens in a new tab)
+          </a>
+          <br>
+          <br>
+          <a href="#">
+            View and print short certificate (opens in a new tab)
+          </a>
+        </p> 
+
+        <h2 class="govuk-heading-m">
+          Do you want to register child 3?
+        </h2>
+        <p  class="govuk-body">
+          <a href="/births/multipleBirths3/02-child3-correct.html">
+            Continue to register child 3
+          </a>
+        </p>
+  
+        <br>
+        <br>
+
+        
       <p  class="govuk-body">
         <a href="../00-service-selector.html">
           Return to homepage
